parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMI
Rule 3     bloc -> statement SEMI
Rule 4     statement -> IF LPAREN expression RPAREN LACC bloc RACC
Rule 5     statement -> IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
Rule 6     statement -> WHILE LPAREN expression RPAREN LACC bloc RACC
Rule 7     statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
Rule 8     statement -> NAME PLUSEGAL expression
Rule 9     statement -> NAME PLUSPLUS
Rule 10    statement -> RETURN expression
Rule 11    statement -> FONCTIONVALUE NAME LPAREN NAME COLON NAME RPAREN LACC bloc RACC
Rule 12    expression -> NAME LPAREN expression COLON expression RPAREN
Rule 13    statement -> expression SEMI
Rule 14    statement -> NAME LBRACK RBRACK EGAL LBRACK expression SEMI expression RBRACK
Rule 15    statement -> NAME LBRACK expression RBRACK EGAL expression
Rule 16    expression -> NAME LBRACK expression RBRACK
Rule 17    statement -> PRINT LPAREN expression RPAREN
Rule 18    statement -> NAME EGAL expression
Rule 19    expression -> expression INF expression
Rule 20    expression -> STRING
Rule 21    expression -> expression INFEG expression
Rule 22    expression -> expression SUP expression
Rule 23    expression -> expression EGALEGAL expression
Rule 24    expression -> expression AND expression
Rule 25    expression -> expression OR expression
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression TIMES expression
Rule 28    expression -> expression MINUS expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> LPAREN expression RPAREN
Rule 31    expression -> NUMBER
Rule 32    expression -> NAME

Terminals, with rules where they appear

AND                  : 24
COLON                : 11 12
DIVIDE               : 29
EGAL                 : 14 15 18
EGALEGAL             : 23
ELSE                 : 5
FONCTIONVALUE        : 11
FOR                  : 7
IF                   : 4 5
INF                  : 19
INFEG                : 21
LACC                 : 4 5 5 6 7 11
LBRACK               : 14 14 15 16
LPAREN               : 4 5 6 7 11 12 17 30
MINUS                : 28
NAME                 : 8 9 11 11 11 12 14 15 16 18 32
NUMBER               : 31
OR                   : 25
PLUS                 : 26
PLUSEGAL             : 8
PLUSPLUS             : 9
PRINT                : 17
RACC                 : 4 5 5 6 7 11
RBRACK               : 14 14 15 16
RETURN               : 10
RPAREN               : 4 5 6 7 11 12 17 30
SEMI                 : 2 3 7 7 13 14
STRING               : 20
SUP                  : 22
TIMES                : 27
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 4 5 5 6 7 11
expression           : 4 5 6 7 8 10 12 12 13 14 14 15 15 16 17 18 19 19 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30
start                : 0
statement            : 2 3 7 7

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (4) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> . IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (6) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (8) statement -> . NAME PLUSEGAL expression
    (9) statement -> . NAME PLUSPLUS
    (10) statement -> . RETURN expression
    (11) statement -> . FONCTIONVALUE NAME LPAREN NAME COLON NAME RPAREN LACC bloc RACC
    (13) statement -> . expression SEMI
    (14) statement -> . NAME LBRACK RBRACK EGAL LBRACK expression SEMI expression RBRACK
    (15) statement -> . NAME LBRACK expression RBRACK EGAL expression
    (17) statement -> . PRINT LPAREN expression RPAREN
    (18) statement -> . NAME EGAL expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    NAME            shift and go to state 9
    RETURN          shift and go to state 10
    FONCTIONVALUE   shift and go to state 11
    PRINT           shift and go to state 12
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMI
    (4) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> . IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (6) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (8) statement -> . NAME PLUSEGAL expression
    (9) statement -> . NAME PLUSPLUS
    (10) statement -> . RETURN expression
    (11) statement -> . FONCTIONVALUE NAME LPAREN NAME COLON NAME RPAREN LACC bloc RACC
    (13) statement -> . expression SEMI
    (14) statement -> . NAME LBRACK RBRACK EGAL LBRACK expression SEMI expression RBRACK
    (15) statement -> . NAME LBRACK expression RBRACK EGAL expression
    (17) statement -> . PRINT LPAREN expression RPAREN
    (18) statement -> . NAME EGAL expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    $end            reduce using rule 1 (start -> bloc .)
    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    NAME            shift and go to state 9
    RETURN          shift and go to state 10
    FONCTIONVALUE   shift and go to state 11
    PRINT           shift and go to state 12
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    statement                      shift and go to state 15
    expression                     shift and go to state 6

state 3

    (3) bloc -> statement . SEMI

    SEMI            shift and go to state 16


state 4

    (4) statement -> IF . LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> IF . LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC

    LPAREN          shift and go to state 17


state 5

    (30) expression -> LPAREN . expression RPAREN
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 18

state 6

    (13) statement -> expression . SEMI
    (19) expression -> expression . INF expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUP expression
    (23) expression -> expression . EGALEGAL expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . TIMES expression
    (28) expression -> expression . MINUS expression
    (29) expression -> expression . DIVIDE expression

    SEMI            shift and go to state 20
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30


state 7

    (6) statement -> WHILE . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 31


state 8

    (7) statement -> FOR . LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC

    LPAREN          shift and go to state 32


state 9

    (8) statement -> NAME . PLUSEGAL expression
    (9) statement -> NAME . PLUSPLUS
    (14) statement -> NAME . LBRACK RBRACK EGAL LBRACK expression SEMI expression RBRACK
    (15) statement -> NAME . LBRACK expression RBRACK EGAL expression
    (18) statement -> NAME . EGAL expression
    (12) expression -> NAME . LPAREN expression COLON expression RPAREN
    (16) expression -> NAME . LBRACK expression RBRACK
    (32) expression -> NAME .

    PLUSEGAL        shift and go to state 33
    PLUSPLUS        shift and go to state 34
    LBRACK          shift and go to state 35
    EGAL            shift and go to state 36
    LPAREN          shift and go to state 37
    SEMI            reduce using rule 32 (expression -> NAME .)
    INF             reduce using rule 32 (expression -> NAME .)
    INFEG           reduce using rule 32 (expression -> NAME .)
    SUP             reduce using rule 32 (expression -> NAME .)
    EGALEGAL        reduce using rule 32 (expression -> NAME .)
    AND             reduce using rule 32 (expression -> NAME .)
    OR              reduce using rule 32 (expression -> NAME .)
    PLUS            reduce using rule 32 (expression -> NAME .)
    TIMES           reduce using rule 32 (expression -> NAME .)
    MINUS           reduce using rule 32 (expression -> NAME .)
    DIVIDE          reduce using rule 32 (expression -> NAME .)


state 10

    (10) statement -> RETURN . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 38

state 11

    (11) statement -> FONCTIONVALUE . NAME LPAREN NAME COLON NAME RPAREN LACC bloc RACC

    NAME            shift and go to state 39


state 12

    (17) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 40


state 13

    (20) expression -> STRING .

    SEMI            reduce using rule 20 (expression -> STRING .)
    INF             reduce using rule 20 (expression -> STRING .)
    INFEG           reduce using rule 20 (expression -> STRING .)
    SUP             reduce using rule 20 (expression -> STRING .)
    EGALEGAL        reduce using rule 20 (expression -> STRING .)
    AND             reduce using rule 20 (expression -> STRING .)
    OR              reduce using rule 20 (expression -> STRING .)
    PLUS            reduce using rule 20 (expression -> STRING .)
    TIMES           reduce using rule 20 (expression -> STRING .)
    MINUS           reduce using rule 20 (expression -> STRING .)
    DIVIDE          reduce using rule 20 (expression -> STRING .)
    RPAREN          reduce using rule 20 (expression -> STRING .)
    RBRACK          reduce using rule 20 (expression -> STRING .)
    COLON           reduce using rule 20 (expression -> STRING .)


state 14

    (31) expression -> NUMBER .

    SEMI            reduce using rule 31 (expression -> NUMBER .)
    INF             reduce using rule 31 (expression -> NUMBER .)
    INFEG           reduce using rule 31 (expression -> NUMBER .)
    SUP             reduce using rule 31 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 31 (expression -> NUMBER .)
    AND             reduce using rule 31 (expression -> NUMBER .)
    OR              reduce using rule 31 (expression -> NUMBER .)
    PLUS            reduce using rule 31 (expression -> NUMBER .)
    TIMES           reduce using rule 31 (expression -> NUMBER .)
    MINUS           reduce using rule 31 (expression -> NUMBER .)
    DIVIDE          reduce using rule 31 (expression -> NUMBER .)
    RPAREN          reduce using rule 31 (expression -> NUMBER .)
    RBRACK          reduce using rule 31 (expression -> NUMBER .)
    COLON           reduce using rule 31 (expression -> NUMBER .)


state 15

    (2) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 41


state 16

    (3) bloc -> statement SEMI .

    IF              reduce using rule 3 (bloc -> statement SEMI .)
    WHILE           reduce using rule 3 (bloc -> statement SEMI .)
    FOR             reduce using rule 3 (bloc -> statement SEMI .)
    NAME            reduce using rule 3 (bloc -> statement SEMI .)
    RETURN          reduce using rule 3 (bloc -> statement SEMI .)
    FONCTIONVALUE   reduce using rule 3 (bloc -> statement SEMI .)
    PRINT           reduce using rule 3 (bloc -> statement SEMI .)
    STRING          reduce using rule 3 (bloc -> statement SEMI .)
    LPAREN          reduce using rule 3 (bloc -> statement SEMI .)
    NUMBER          reduce using rule 3 (bloc -> statement SEMI .)
    $end            reduce using rule 3 (bloc -> statement SEMI .)
    RACC            reduce using rule 3 (bloc -> statement SEMI .)


state 17

    (4) statement -> IF LPAREN . expression RPAREN LACC bloc RACC
    (5) statement -> IF LPAREN . expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 42

state 18

    (30) expression -> LPAREN expression . RPAREN
    (19) expression -> expression . INF expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUP expression
    (23) expression -> expression . EGALEGAL expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . TIMES expression
    (28) expression -> expression . MINUS expression
    (29) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 43
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30


state 19

    (12) expression -> NAME . LPAREN expression COLON expression RPAREN
    (16) expression -> NAME . LBRACK expression RBRACK
    (32) expression -> NAME .

    LPAREN          shift and go to state 37
    LBRACK          shift and go to state 44
    RPAREN          reduce using rule 32 (expression -> NAME .)
    INF             reduce using rule 32 (expression -> NAME .)
    INFEG           reduce using rule 32 (expression -> NAME .)
    SUP             reduce using rule 32 (expression -> NAME .)
    EGALEGAL        reduce using rule 32 (expression -> NAME .)
    AND             reduce using rule 32 (expression -> NAME .)
    OR              reduce using rule 32 (expression -> NAME .)
    PLUS            reduce using rule 32 (expression -> NAME .)
    TIMES           reduce using rule 32 (expression -> NAME .)
    MINUS           reduce using rule 32 (expression -> NAME .)
    DIVIDE          reduce using rule 32 (expression -> NAME .)
    SEMI            reduce using rule 32 (expression -> NAME .)
    RBRACK          reduce using rule 32 (expression -> NAME .)
    COLON           reduce using rule 32 (expression -> NAME .)


state 20

    (13) statement -> expression SEMI .

    SEMI            reduce using rule 13 (statement -> expression SEMI .)
    RPAREN          reduce using rule 13 (statement -> expression SEMI .)


state 21

    (19) expression -> expression INF . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 45

state 22

    (21) expression -> expression INFEG . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 46

state 23

    (22) expression -> expression SUP . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 47

state 24

    (23) expression -> expression EGALEGAL . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 48

state 25

    (24) expression -> expression AND . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 49

state 26

    (25) expression -> expression OR . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 50

state 27

    (26) expression -> expression PLUS . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME

    NAME            shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 14

    expression                     shift and go to state 51

state 28

    (27) expression -> expression TIMES . expression
    (12) expression -> . NAME LPAREN expression COLON expression RPAREN
    (16) expression -> . NAME LBRACK expression RBRACK
    (19) expression -> . expression INF expression
    (20) expression -> . STRING
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUP expression
    (23) expression -> . expression EGALEGAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MINUS expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . NAME
